styled text, fixed text alignment

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -113,6 +113,7 @@ h5 {
 	color: #a9b2b9;
 	font-size: 14px;
 	font-weight: 400;
+	text-transform: uppercase;
 }
 /* the reset removed these styles, so we're adding them back in */
 strong {
@@ -131,6 +132,10 @@ a:hover {
 }
 a {
 	color: #648880;
+	text-decoration: none;
+}
+p a {
+	border-bottom: 1px solid #dfe2e5;
 }
 /*
 		===========================================================================
@@ -154,6 +159,7 @@ a {
 .hero {
 	padding: 22px 80px 66px 80px;
 	line-height: 44px;
+	text-align: center;
 }
 .hero h2 {
 	font-size: 36px;
@@ -195,10 +201,13 @@ a {
 }
 .tagline {
 	margin: 66px 0 22px 0;
+	text-align: right;
 }
 .primary-nav {
 	font-size: 14px;
 	font-weight: 400;
+	letter-spacing: .5px;
+	text-transform: uppercase;
 }
 /*
 		###########################################################################
@@ -214,4 +223,12 @@ a {
 .primary-footer small {
 	float: left;
 	font-weight: 400;
+}
+/*
+		###########################################################################
+		Navigation
+		###########################################################################
+*/
+.nav {
+	text-align: right;
 }
